# qi-oss

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Why_QI.md  pyproject.toml  requirements.txt
migrations/: 001_initial.sql  003_llm_runs.sql  004_relevance_digests.sql  005_relevance_digest_observability.sql  006_relevance_digest_total_tokens.sql
qi/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py
qi/capture/: __init__.py  dci.py  snr_db_import.py  snr_import.py  weekly.py
qi/llm/: __init__.py  client.py  prompts.py  render.py  schema.py  synthesis.py  validate.py
qi/processing/: __init__.py  eod.py  features.py  heuristics.py
qi/reporting/: __init__.py  monthly.py  render.py  weekly.py
qi/utils/: __init__.py  time.py
schemas/: event.schema.json  report_output.schema.json  snr_import.schema.json  weekly_retro.schema.json
tests/: __init__.py  conftest.py  test_bug_fixes.py  test_cli.py  test_config.py  test_db.py  test_eod.py  test_features.py  test_heuristics.py  test_llm_client.py  test_llm_prompts.py  test_llm_render.py  test_llm_synthesis.py  test_llm_validate.py  test_models.py
